# demuxalot

./: LICENSE  README.md  deploy_to_pypi.sh  pyproject.toml  setup.py
.github/workflows/: publish.yml  run_test.yml
demultiplexit/: __init__.py  alex_demultiplexing.py  cellranger_specific.py  demutiplexit.py  snp_counter.py
demuxalot/: BDRhapsody_specific.py  __init__.py  cellranger_specific.py  demux.py  genotypes.py  snp_counter.py  snp_detection.py  utils.py
examples/: 1-demultiplex-only.py  1-plain_demultiplexing.py  2-with-detection-of-new-SNPs.ipynb  3-plain_demultiplexing-with-custom-tags.py
examples/example_data/: test_bamfile.bam  test_bamfile.bam.bai  test_barcodes.csv  test_genotypes.vcf
scrnaseq_demux/: cellranger_specific.py  demutiplexit.py  demux.py  snp_counter.py  snp_detection.py  utils.py
test/: test.py  test_counting.py
test/calibration/: test_calibration.py
tests/: test.py  test_counting.py  test_synthetic.py  test_utils.py
tests/calibration/: test_calibration.py
